--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "google-api-python-client (>=2.166.0,<3.0.0)",
     "google-auth-httplib2 (>=0.2.0,<0.3.0)",
-    "google-auth-oauthlib (>=1.2.1,<2.0.0)"
+    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
+    "pytz (>=2025.2,<2026.0)"
 ]
 
 [tool.poetry]
