--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "google-api-python-client (>=2.166.0,<3.0.0)",
     "google-auth-httplib2 (>=0.2.0,<0.3.0)",
     "google-auth-oauthlib (>=1.2.1,<2.0.0)",
-    "pytz (>=2025.2,<2026.0)"
+    "pytz (>=2025.2,<2026.0)",
+    "google-cloud-secret-manager (>=2.23.2,<3.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
